# rust-todo-backend

./: .gitignore  Cargo.toml
entity/: Cargo.toml
entity/src/: user.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: config.rs  error.rs  main.rs
src/controllers/: auth.rs  mod.rs  todo.rs
src/db/: mod.rs  sql.rs
src/entities/: todo.rs
src/models/: mod.rs  user.rs
src/routes/: auth.rs  todo.rs
src/utils/: into_response.rs  mod.rs
