[package]
name = "todo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.3"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tower-http = "0.6.2"
uuid = "1.16.0"
dotenvy = "0.15.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

sea-orm = { version = "1.1.8", features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
] }

sea-orm-cli = "1.1.8"
